fixed text overlapping

--- a/Project1/Assets/CSS/style.css
+++ b/Project1/Assets/CSS/style.css
@@ -64,7 +64,6 @@ li a:hover {
 	display: inline-block;
 	vertical-align: top;
 	width: 60%;
-	height: 10%;
 	margin: 10px;
 	text-align: center;
 	font-size: 20;
@@ -76,6 +75,7 @@ li a:hover {
 	width: 33%;
 	height: 25%;
 	border: 2px black solid;
+	min-height:30px;
 }
 
 .container {
@@ -84,7 +84,7 @@ li a:hover {
 }
 #leftbox, #centerbox, #rightbox {
 	float: center;
-	height: auto;
+
 	width: 25%;
 	margin: 3%;
 	border: 2px solid black;
